--- a/3.html
+++ b/3.html
@@ -12,7 +12,7 @@
 </ol>
 
 <h1>JavaScript</h1>
-<img src = "https://images.unsplash.com/photo-1627398242454-45a1465c2479?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt = "upsplash_JavaScript_photo" width = "100%" height = "80%">
+<img src = "https://images.unsplash.com/photo-1627398242454-45a1465c2479?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt = "upsplash_JavaScript_photo" width = "700" height = "500">
 <p>
   <a href= 'https://ko.wikipedia.org/wiki/%EC%9E%90%EB%B0%94%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8'>자바스크립트</a>(영어: JavaScript)는 <strong>객체 기반의 스크립트 프로그래밍 언어</strong>이다. 이 언어는 웹 브라우저 내에서 주로 사용되며, <u>다른 응용 프로그램의 내장 객체에도 접근할 수 있는 기능</u>을 가지고 있다. 또한 Node.js와 같은 런타임 환경과 같이 서버 프로그래밍에도 사용되고 있다.
 </p>
