--- a/2.html
+++ b/2.html
@@ -12,7 +12,7 @@
 </ol>
 
 <h1>CSS</h1>
-<img src = "https://images.unsplash.com/photo-1523437113738-bbd3cc89fb19?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80" alt = "upsplash_CSS_photo" width = "100%" height = "80%">
+<img src = "https://images.unsplash.com/photo-1523437113738-bbd3cc89fb19?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80" alt = "upsplash_CSS_photo" width = "700" height = "500">
 <p>
   <a href = 'https://ko.wikipedia.org/wiki/CSS'>CSS</a>는 종속형 시트 또는 캐스케이딩 스타일 시트(영어: Cascading Style Sheet) <strong>마크업 언어가 실제 표시되는 방법을 기술하는 스타일 언어</strong>(영어: Style sheet language 스타일 시트 랭귀지)로, HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준이고, <u>레이아웃과 스타일을 정의할 때의 자유도가 높다.</u>
 </p>
